<resources>
    <string name="app_name">FittingVRoom</string>
    <string name="title_home">Home</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_cart">Cart</string>
    <string name="title_fitting">Fitting</string>

    <string name="help_text">
        "Для того, чтобы виртуальный манекен максимально"
        "точно повторял ваши индивидуальные особенности фигуры,"
        "необходимо правильно снять мерки, на основании которых будет построен ваш виртуальный образ.\n\n"
        "⦁ Лучше не пытаться снять мерки самостоятельно. Попросите кого-нибудь помочь вам.\n\n"
        "⦁ Измерения необходимо производить в нижнем белье или тонкой одежде.\n\n"
        "⦁ При измерении лента должна плотно (но без натяжения) прилегать к телу.\n\n"
        "⦁ Стойте прямо, без напряжения, не сутультесь, не сгибайте ногу в колене.\n"

    </string>
    <string name="measurements_text1">"<b>Рост:</b> Измеряется от макушки до пят.\n"</string>
    <string name="measurements_text2">"<b>Обхват груди (1):</b> сантиметровая лента проходит горизонтально через наиболее выступающие точки грудной клетки. На спине лента накладывается на лопатки.\n"</string>
    <string name="measurements_text3"> "<b>Обхват талии (2):</b> Сантиметровая лента проходит горизонтально вокруг туловища на уровне талии.\n"</string>
    <string name="measurements_text4"> "<b>Обхват бедер (3):</b> Сантиметровая лента должна проходить горизонтально в самой широкой части бедер по наиболее выступающим точкам живота спереди и ягодиц сзади. При наличии живота, обхват бедер измеряется через линейку, приставленную к самой выступающей части живота.\n"</string>
    <string name="measurements_text5"> "<b>Ширина груди (4):</b> Измерьте расстояние между передними углами подмышечных впадин.\n"</string>
    <string name="measurements_text6">"<b>Ширина спины (5):</b> Расположите ленту горизонтально по спине и измерьте расстояние между задними углами подмышечных впадин"</string>

    <string name="help_text_try">Примерьте понравившуюся модель, нажав на вешалку</string>
    <string name="_1_">1</string>
    <string name="_2_">2</string>
    <string name="_3_">3</string>
    <string name="_4_">4</string>
    <string name="_5_">5</string>
    <string name="_6_">6</string>
    <string name="ok">OK</string>

<!--    Home screen-->
    <string name="home_page_bottom_btn_text">Создать манекен</string>
    <string name="home_page_description_first_line">Вы поймете, что вам действительно подходит</string>
    <string name="home_page_description_second_line">не выходя из приложения</string>

<!--    Model creation screen-->
    <string name="model_screen_bottom_btn_text">Добавить параметры</string>
    <string name="model_toolbar_title">Создать модель</string>

<!--    Model parameters screen-->
    <string name="gender_list_female">Женский</string>
    <string name="gender_list_male">Мужской</string>
    <string name="parameter_gender_title">Пол</string>
    <string name="parameter_height_title">Рост</string>
    <string name="parameter_chest_girth_title">Обхват груди</string>
    <string name="parameter_waist_girth_title">Обхват талии</string>
    <string name="parameter_hips_girth_title">Обхват бедер</string>
    <string name="parameter_chest_width_title">Ширина груди</string>
    <string name="parameter_back_width_title">Ширина спины</string>
    <string name="parameter_save_btn">Сохранить</string>
    <string name="parameter_continue_btn">Продолжить</string>
    <string name="no_parameters_error">Введите все параметры!</string>

<!--    pick up screen-->
    <string name="no_data">Нет данных</string>
    <string name="pick_up_the_image">Подобрать образ</string>
    <string name="сhoose_an_image">Выбрать образ</string>
    <string name="rub"> Руб.</string>
    <string name="basket">Корзина</string>
    <string name="choose_size">Выбрать размера</string>
    <string name="art_">Арт №</string>
    <string name="copy_clipboard">Скопировано в буфер обмена</string>
    <string name="no_size">Не выбран размер</string>

<!--    Fitting screen-->
    <string name="fitting_screen_bottom_btn_text">Выбрать образ</string>
    <string name="fitting_toolbar_title">Подобрать образ</string>
    <string name="color">Цвет</string>
    <string name="size">Размер</string>
    <string name="total">Итого</string>
    <string name="Basket">Корзина</string>
    <string name="go_to_market">Перейти к оформлению заказа</string>
    <string name="total_price">Стоймость заказа</string>
    <string name="added_to_basket">Добавлено в корзину</string>

</resources>