<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="?attr/actionBarSize"
    tools:context=".ui.help.HelpFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <View
            android:id="@+id/view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/help_screen_gradient"
            app:layout_constraintBottom_toBottomOf="@+id/appCompatImageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btnClose"
            android:layout_width="@dimen/mannequin_help_image_width"
            android:layout_height="@dimen/mannequin_help_image_height"
            android:layout_marginTop="@dimen/mannequin_help_image_margin_top"
            android:layout_marginEnd="@dimen/mannequin_help_image_margin_end"
            android:background="@color/transparent_background"
            android:src="@drawable/ic_close_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/appCompatImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/girl_and_boy" />

        <TextView
            android:id="@+id/text_help1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/help_text"
            android:textAlignment="textStart"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appCompatImageView" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_try_on"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:src="@drawable/try_on"
            app:layout_constraintBottom_toBottomOf="@+id/text_tryon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/text_tryon" />

        <TextView
            android:id="@+id/text_tryon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="2dp"
            android:text="@string/help_text_try"
            android:textAlignment="textStart"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@+id/img_try_on"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_help1" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_measuer"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toStartOf="@+id/img_measuer_back"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_tryon"
            app:srcCompat="@drawable/measurements" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_measuer_back"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/img_measuer_chest"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/img_measuer"
            app:layout_constraintTop_toBottomOf="@+id/text_tryon"
            app:layout_constraintVertical_chainStyle="packed"
            app:srcCompat="@drawable/back_measeur" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_measuer_chest"
            android:layout_width="wrap_content"
            android:layout_height="0dp"

            app:layout_constraintBottom_toBottomOf="@+id/img_measuer"
            app:layout_constraintStart_toStartOf="@+id/img_measuer_back"
            app:layout_constraintTop_toBottomOf="@+id/img_measuer_back"
            app:srcCompat="@drawable/chest_width" />

        <TextView
            android:id="@+id/text_measu_num1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:gravity="start"
            android:text="@string/_1_"
            android:textSize="40sp"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_measuer" />

        <TextView
            android:id="@+id/text_measur1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:gravity="start"
            android:text="@string/measurements_text1"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/text_measu_num1"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintStart_toEndOf="@+id/text_measu_num1"
            app:layout_constraintTop_toBottomOf="@+id/img_measuer" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="5dp"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="text_measu_num1,text_measur1" />

        <TextView
            android:id="@+id/text_measu_num2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:gravity="start"
            android:text="@string/_2_"
            android:textSize="40sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/barrier1" />

        <TextView
            android:id="@+id/text_measur2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:gravity="start"
            android:text="@string/measurements_text2"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/text_measu_num1"
            app:layout_constraintTop_toBottomOf="@+id/barrier1" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="text_measu_num2,text_measur2" />

        <TextView
            android:id="@+id/text_measu_num3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:gravity="start"
            android:text="@string/_3_"
            android:textSize="40sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/barrier2" />

        <TextView
            android:id="@+id/text_measur3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:gravity="start"
            android:text="@string/measurements_text3"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/text_measu_num3"
            app:layout_constraintTop_toBottomOf="@+id/barrier2" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="text_measu_num3,text_measur3" />

        <TextView
            android:id="@+id/text_measu_num4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:gravity="start"
            android:text="@string/_4_"
            android:textSize="40sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/barrier3" />

        <TextView
            android:id="@+id/text_measur4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:gravity="start"
            android:text="@string/measurements_text4"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/text_measu_num4"
            app:layout_constraintTop_toBottomOf="@+id/barrier3" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="text_measu_num4,text_measur4" />

        <TextView
            android:id="@+id/text_measu_num5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:gravity="start"
            android:text="@string/_5_"
            android:textSize="40sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/barrier4" />

        <TextView
            android:id="@+id/text_measur5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:gravity="start"
            android:text="@string/measurements_text5"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/text_measu_num5"
            app:layout_constraintTop_toBottomOf="@+id/barrier4" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="text_measu_num5,text_measur5" />

        <TextView
            android:id="@+id/text_measu_num6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:gravity="start"
            android:text="@string/_6_"
            android:textSize="40sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/barrier5" />

        <TextView
            android:id="@+id/text_measur6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:gravity="start"
            android:text="@string/measurements_text6"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/text_measu_num6"
            app:layout_constraintTop_toBottomOf="@+id/barrier5" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="text_measu_num6,text_measur6" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bt_ok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            style="@style/BottomButtonTheme.Dark"
            android:text="@string/ok"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/barrier6" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>