<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_marginBottom="?attr/actionBarSize"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/toolbar_background"
                android:minHeight="?attr/actionBarSize">

                <TextView
                    style="@style/ToolbarTheme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Basket" />
            </androidx.appcompat.widget.Toolbar>


        </LinearLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/data"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/basket_horizontal_margin"
        android:layout_marginHorizontal="@dimen/basket_horizontal_margin"
        app:layout_constraintBottom_toTopOf="@+id/divider"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
        tools:layout_editor_absoluteX="10dp"
        tools:listitem="@layout/shopcapt_item"/>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="@dimen/basket_horizontal_margin"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="@+id/total_price" />
    <!--Цена-->
    <TextView
        android:id="@+id/total_price"
        style="@style/Product_card_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/basket_horizontal_margin"
        android:layout_marginBottom="@dimen/basket_horizontal_margin"
        android:text="@string/total_price"
        app:layout_constraintBottom_toTopOf="@+id/bt_go"
        app:layout_constraintStart_toStartOf="parent" />


    <TextView
        android:id="@+id/tv_price"
        style="@style/Product_card_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginEnd="@dimen/pick_up_margin_start_rub"
        app:layout_constraintBottom_toBottomOf="@+id/total_price"
        app:layout_constraintEnd_toStartOf="@+id/price"
        app:layout_constraintTop_toTopOf="@+id/total_price"
        tools:text="1565" />

    <TextView
        android:id="@+id/price"
        style="@style/Product_card_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginEnd="@dimen/basket_horizontal_margin"
        android:layout_marginStart="@dimen/pick_up_margin_start_rub"
        android:text="@string/rub"
        app:layout_constraintBottom_toBottomOf="@+id/tv_price"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_price" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_go"
        style="@style/BottomButtonTheme.Dark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/basket_horizontal_margin"
        android:layout_marginBottom="@dimen/basket_horizontal_margin"
        android:text="@string/go_to_market"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_no_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/no_data"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>